fixed unit test 6: margin for offer class

--- a/lab4_9/style.css
+++ b/lab4_9/style.css
@@ -14,8 +14,8 @@ html{
 }
 div.offer{
     display: inline-block;
-    width: 400;
-    margin: 4;
+    width: 400px;
+    margin: 4px;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 1px;
